--- a/src/sass/base/_buttons.sass
+++ b/src/sass/base/_buttons.sass
@@ -188,7 +188,7 @@
   transition-property: background-color, opacity, visibility
   transition-duration: $animation-speed
 
-  +media('<mob-lg')
+  +media('<mob')
     +size(45px)
 
   &::before
