--- a/src/sass/components/_images-slider.sass
+++ b/src/sass/components/_images-slider.sass
@@ -7,7 +7,7 @@
   position: relative
   margin-bottom: $bottom-space
 
-  +media('<tab-lg')
+  +media('<tab')
     margin-bottom: $bottom-space--large
 
 .images-slider__list, .slick-dotted.images-slider__list
@@ -92,7 +92,7 @@
     .slide-curr
       color: $text-color
 
-  .slick-dots, .#{$user-content} & .slick-dots
+  .slick-dots, .#{$article-content} & .slick-dots
     position: absolute
     bottom: $bottom-space + 1
 
