--- a/src/sass/components/_user-options.sass
+++ b/src/sass/components/_user-options.sass
@@ -111,7 +111,7 @@ $uo-border-radius: 0 0 7px 7px
         padding-left: 12px
 
         // скрыть текст для мобил
-        +media('<mob-lg')
+        +media('<mob')
           display: none
 
       & ~ span.hide-text
