--- a/src/sass/forms/_captcha.sass
+++ b/src/sass/forms/_captcha.sass
@@ -2,7 +2,7 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/* captcha
+// Captcha
 .captcha
   position: relative
   // Важно! Для позицирования отметки подтверждения полей формы
@@ -47,5 +47,3 @@
 
         span
           border-color: $link-color
-
-/* captcha end
