--- a/src/sass/forms/_forms.sass
+++ b/src/sass/forms/_forms.sass
@@ -2,102 +2,28 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/* forms layout
-.form-row, .input-wrap
-  position: relative
-  // Важно! Для позицирования отметки подтверждения полей формы
-  margin-bottom: $form-bottom-space
-  z-index: 1
-// Важно! Отметка подтверждения полей формы имеет z-index: -1
-
-.form-row:last-child
-  margin-bottom: 0
-
-.input-holder
-  position: relative
-  // Важно! Для позицирования отметки подтверждения полей формы
-  z-index: 1
-// Важно! Отметка подтверждения полей формы имеет z-index: -1
-
-.label-holder, label
-  +font-normal
+/* form elements
+label
+  display: inline-block
+  vertical-align: top
   +font($font-size, $line-height)
   color: $text-color-light
-  margin-bottom: 7px
-
-label, .label
-  +display-inline-block-top
+  margin-bottom: 0.5em
   user-select: none
   -webkit-tap-highlight-color: transparent !important
 
-  .label-holder &
-    margin-bottom: 0
+  mark
+    background: none
+    color: $error-color
 
-.form-mark
-  +display-inline-block-top
-  position: relative
-  margin-left: -15px
-  left: 15px
-  color: $mark-color
-
-  .form-note &
-    margin-left: 0
-    left: auto
-
-.form-row
-  +margin-horizontal(-#{round($form-gap*0.5)})
-  font-size: 0
-  letter-spacing: -4px
-
-  .input-wrap
-    +display-inline-block-top
-    width: calc(100% * 0.5 - #{$form-gap})
-    +margin-horizontal(#{round($form-gap*0.5)})
-    margin-bottom: 0
-
-    font-size: $font-size
-    letter-spacing: normal
-
-    +media('<mob-lg')
-      display: block
-      width: auto
-      margin-bottom: $form-bottom-space--mob
-
-  label
-    +truncate(100%)
-
-// some column
-.form-columnize
-  column-count: 2
-
-.form-columnize--3
-  column-count: 3
-
-.form-columnize, .form-columnize--3
-  column-gap: $form-gap
-
-  +media('<mob-lg')
-    column-count: 1
-    column-gap: 0
-
-  label
-    +truncate(100%)
-
-  .input-wrap
-    display: inline-block
-    vertical-align: top
-    width: 100%
-
-/* forms layout end
-
-// Input Fields
+// Input Fields:
 // input[type="text"]
 // input[type="password"]
 // input[type="email"]
 // input[type="search"]
 // textarea
 
-#{$inputs-list}
+.form-def
   display: block
   padding: $form-input-space-vt $form-input-space-h $form-input-space-vb
   width: 100%
@@ -107,19 +33,14 @@ label, .label
   border: $form-border-width solid $form-border-color
   cursor: pointer
 
-  // Стили для текста полей ввода прописываем отдельно через миксин,
-  // чтобы была возможность добавить медиа развилки через тот же миксин
-  &
-    +inputs-font
+  // Стили для текста
+  +inputs-font
 
-  // Стили вертикальных отступов для полей ввода прописываем отдельно через миксин,
-  // чтобы была возможность добавить медиа развилки через тот же миксин
-  &
-    +forms-space
+  // Вертикальные внешние отступы
+  +forms-space
 
-  // Стили для полей ввода, которые лежат в специальной обертке
-  // И для тех, которые являются последними в родительском контейнере
-  .input-wrap &, &:last-child
+  // Последний элемент в списке
+  &:last-child
     margin-bottom: 0
 
 textarea
@@ -140,7 +61,7 @@ input, textarea
     opacity: 0
 
 // States
-#{$inputs-list}
+.form-def
   &[disabled]
     cursor: default
     color: $form-text-color--disabled
@@ -150,6 +71,9 @@ input, textarea
     +placeholder
       color: $form-text-color--disabled
 
+  &:focus
+    cursor: text
+
   &:not([disabled]):not(.error):not(.success):not(.filled)
     //form hover
     &:hover
@@ -158,7 +82,6 @@ input, textarea
     //form focus
     &:focus
       border-color: $form-border-color--focus
-      cursor: text
 
   // has value (js)
   //style for label
@@ -198,10 +121,11 @@ input, textarea
     +placeholder
       color: $form-error-color
 
-/* inputs states end
-
+@import group
 @import checkboxes
 @import select
 @import select2
 @import validation
 @import captcha
+
+/* form elements end
