--- a/src/sass/test-mixins.sass
+++ b/src/sass/test-mixins.sass
@@ -7,19 +7,19 @@
 
 .mx-test .content
   margin: 0 0 0 300px
-  +padding-vertical(nth($text-layout-space, 1))
+  +padding-vertical(nth($layout-text-space, 1))
 
 .mx-test .sidebar
   width: 260px
 
 .mx-test .layout-text
-  +padding-horizontal(nth($text-layout-space, 2))
+  +padding-horizontal(nth($layout-text-space, 2))
 
 .mx-test .section
-  margin-bottom: $bottom-space--large
+  margin-bottom: $bottom-space * 3
 
 .mx-test .section__box
-  margin-bottom: $bottom-space--medium
+  margin-bottom: $bottom-space * 2
 
 .mx-subtitle
   +font-bold
