--- a/src/css/test-mixins.css
+++ b/src/css/test-mixins.css
@@ -1,7 +1,7 @@
 .mx-test .content {
   margin: 0 0 0 300px;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .mx-test .sidebar {
@@ -9,8 +9,8 @@
 }
 
 .mx-test .layout-text {
-  padding-right: 60px;
-  padding-left: 60px;
+  padding-right: 3rem;
+  padding-left: 3rem;
 }
 
 .mx-test .section {
@@ -146,7 +146,8 @@
   max-width: 90%;
   width: 200px;
   height: 50px;
-  filter: drop-shadow(4px 4px 2px rgba(0, 0, 0, 0.4));
+  -webkit-filter: drop-shadow(4px 4px 2px rgba(0, 0, 0, 0.4));
+          filter: drop-shadow(4px 4px 2px rgba(0, 0, 0, 0.4));
 }
 
 .mx-triangle__inner::before {
@@ -206,7 +207,8 @@
   max-width: 90%;
   width: 200px;
   height: 50px;
-  filter: drop-shadow(4px 4px 2px rgba(0, 0, 0, 0.4));
+  -webkit-filter: drop-shadow(4px 4px 2px rgba(0, 0, 0, 0.4));
+          filter: drop-shadow(4px 4px 2px rgba(0, 0, 0, 0.4));
 }
 
 .mx-triangle-pretty__inner.mx--to-north::before, .mx-triangle-pretty__inner.mx--to-north::after {
