--- a/src/sass/components/_components.sass
+++ b/src/sass/components/_components.sass
@@ -2,20 +2,63 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
+/* === Helper classes ==
+.mark
+  color: $mark-color
+
+.align-center
+  text-align: center
+
+.align-left
+  text-align: left
+
+.align-right
+  text-align: right
+
+.float-left
+  float: left
+
+.float-right
+  float: right
+
+.push-auto
+  margin-left: auto
+  margin-right: auto
+
+.nobr
+  white-space: nowrap
+
+.hide
+  display: none !important
+
+.hide-text
+  +hide-text
+
+.desktop-only
+  +media('<tab')
+    display: none
+
+.devices-only
+  +media('>=tab')
+    display: none
+
+.mobile-only
+  +media('>=mob')
+    display: none
 
 /* === HEADER ===
 .header
-  background-color: lightgreen
+  background-color: rgba(lightgreen, 0.8)
 
-.header__holder
+.header-container
+  display: flex
+  align-items: center
   position: relative
-  padding: 10px 0
   z-index: 5
-  +clear
 
 /* logo
 .logo
-  float: left
+  flex-shrink: 0
   position: relative
   overflow: hidden
   width: 85px
@@ -45,8 +88,14 @@
   li
     position: relative
 
+    .nav__angle
+      display: none
+
     &.has-drop
       padding-right: 2rem
+
+      & > .nav__tab > .nav__angle
+        display: block
 
       .nav__angle
         position: absolute
@@ -63,11 +112,6 @@
     float: left
     margin-right: 2rem
 
-    &.has-drop > .nav__tab .nav__angle i
-      display: inline-block
-      vertical-align: top
-      +triangle(bottom, tomato, 5px, 2)
-
 .nav__drop
   position: absolute
   left: 0
@@ -75,7 +119,7 @@
   background-color: white
   border: 1px solid $border-color
   padding: 2rem
-  width: $page-layout-min
+  width: $layout-page-min-width
   opacity: 0
   visibility: hidden
   z-index: 10
@@ -89,12 +133,6 @@
     font-size: 1.4rem
     line-height: 1.5
 
-    &.has-drop > .nav__tab .nav__angle i
-      display: inline-block
-      vertical-align: top
-      +triangle(right, tomato, 5px, 2)
-
-
   .nav__drop
     top: 0
     left: 100%
@@ -102,74 +140,19 @@
 
 /* === CONTENT ===
 .main
-  flex-shrink: 1
-  flex-grow: 1
   position: relative
-  clear: both
-  z-index: 4
-
-.main__holder
-  width: 100%
-  +clear
-
-.content-wrap
-  float: left
-  width: 100%
 
 .content
-  margin: 0 200px 0 300px
-  min-height: 50px
-
-  background-color: whitesmoke
-
-  +media('<desk-lg')
-    margin-right: 0
-
-  +media('<tab-lg')
-    margin-left: 0
-
-
-/* === SIDEBAR ===
-.sidebar
-  display: inline
-  float: left
-  margin: 0 0 0 -100%
-  width: $sidebar-width
-
-  background-color: sandybrown
-
-  +media('<tab-lg')
-    display: none
-
-
-/* === ASIDE ===
-.aside
-  display: inline
-  float: right
-  margin: 0 0 0 -#{$aside-width}
-  width: $aside-width
-  background-color: sandybrown
-
-  +media('<desk-lg')
-    display: none
-
+  background-color: rgba(whitesmoke, 0.8)
 
 /* === FOOTER ===
 .footer
-  //margin: 0 auto
   position: relative
-  clear: both
-  z-index: 5
-  +font(16px, round-float(24/16, 3))
-  color: $text-color
-  border-top: 1px solid $border-color
+  //z-index: 5
 
-  background-color: lightgreen
-
-.footer__holder
-  overflow: hidden
-  cursor: default
-  padding: $footer-grid-space
+  padding-top: 2rem
+  padding-bottom: 2rem
+  background-color: rgba(lightgreen, 0.8)
 
 /* footer bottom
 .footer-bottom
@@ -193,15 +176,15 @@
   vertical-align: top
   width: calc(33.33% - 5px)
 
-  +media('<mob-lg')
+  +media('<mob')
     min-width: 100%
 
   &:first-child
-    +media('>=mob-lg')
+    +media('>=mob')
       text-align: left
 
   &:last-child
-    +media('>=mob-lg')
+    +media('>=mob')
       text-align: right
 
   a
@@ -224,11 +207,11 @@
       text-decoration: none
 
 .developer__label
-  +media('<mob-lg')
+  +media('<mob')
     display: block
 
   i
-    +media('<mob-lg')
+    +media('<mob')
       display: none
 
 .developer__logo
