--- a/src/sass/components/_sliders-vendor.sass
+++ b/src/sass/components/_sliders-vendor.sass
@@ -71,7 +71,7 @@
   margin: 0
   line-height: 0
 
-  .#{$user-content} &
+  .#{$article-content} &
     margin: 0
     max-width: none
 
@@ -81,7 +81,7 @@
     height: auto
     margin: 0
 
-    &, .#{$user-content} &
+    &, .#{$article-content} &
       padding: 4px 10px
       margin: 0
 
