--- a/src/sass/forms/_select2.sass
+++ b/src/sass/forms/_select2.sass
@@ -2,7 +2,7 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/* select2
+// Custom select
 .select2
   +forms-space
 
@@ -161,5 +161,3 @@
     .error + &
       +placeholder
         color: $form-error-color
-
-/* select2 end
